--- a/app/views/mvp1/org-view-dwp.html
+++ b/app/views/mvp1/org-view-dwp.html
@@ -16,7 +16,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-width-container">
             <h1 class="govuk-heading-l">
-                G4S
+                DWP
             </h1>
 
             <div class="govuk-cards govuk-cards--3">
@@ -24,15 +24,10 @@
                     <h2 class="govuk-heading-m">Company details</h2>
 
                     <p>
-                        5th Floor<br>
-                        Southside<br>
-                        105 Victoria Street<br>
+                        Caxton House<br>
+                        6-12 Tothill Street<br>
                         London<br>
-                        SW1E 6QT
-                    </p>
-
-                    <p>
-                        Company number: 04992207
+                        SW1H 9NA
                     </p>
 
                     <p>
@@ -46,7 +41,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        3
+                        8
 
                         <span class="govuk-visually-hidden">contacts in the system</span>
                     </p>
@@ -71,9 +66,9 @@
                         <span class="govuk-visually-hidden">There are currently</span>
 
                         {% if data['user-full-name'] %}
-                            55
+                            433
                         {% else %}
-                            54
+                            432
                         {% endif %}
 
                         <span class="govuk-visually-hidden">users in the system</span>
@@ -81,11 +76,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-G4S" class="govuk-link">Add a user</a>
+                            <a href="user-add-user-prap-DWP" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-G4S" class="govuk-link">View all users</a>
+                            <a href="user-list-prap-DWP" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
@@ -96,7 +91,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        4
+                        10
 
                         <span class="govuk-visually-hidden">services in the system</span>
                     </p>
@@ -114,7 +109,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        4
+                        18
 
                         <span class="govuk-visually-hidden">teams in the system</span>
                     </p>
@@ -150,12 +145,12 @@
                         },
                         {
                             value: "delete",
-                            text: "De-activate G4S"
+                            text: "De-activate DWP"
                         }
                     ]
                 }) }}
 
-                <input type="hidden" value="G4S" name="organisation-name" id="organisation-name">
+                <input type="hidden" value="DWP" name="organisation-name" id="organisation-name">
 
                 <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">Continue</button>
             </form>
