--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -30,7 +30,9 @@
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            DWP
+                            <a href="org-view-dwp" class="govuk-link">
+                                DWP
+                            </a>
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
@@ -53,7 +55,9 @@
                     {% if data['organisation-name'] %}
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            {{ data['organisation-name'] }}
+                            <a href="org-view-custom" class="govuk-link">
+                                {{ data['organisation-name'] }}
+                            </a>
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
@@ -96,7 +100,9 @@
 
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            G4S
+                            <a href="org-view-g4s" class="govuk-link">
+                                G4S
+                            </a>
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
