Add some checking for custom org contacts and address

--- a/app/views/mvp1/org-view-custom.html
+++ b/app/views/mvp1/org-view-custom.html
@@ -23,9 +23,25 @@
                 <div class="govuk-cards--2__item govuk-card--company">
                     <h2 class="govuk-heading-m">Company details</h2>
 
+                    {% if data['address-line-1'] %}
                     <p>
-                        ORG ADDRESS HERE
+                        {% if data['address-line-1'] %}
+                            {{ data['address-line-1'] }}<br>
+                        {% endif %}
+
+                        {% if data['address-line-2'] %}
+                            {{ data['address-line-2'] }}<br>
+                        {% endif %}
+
+                        {% if data['address-town'] %}
+                            {{ data['address-town'] }}<br>
+                        {% endif %}
+
+                        {% if data['address-postcode'] %}
+                            {{ data['address-postcode'] }}
+                        {% endif %}
                     </p>
+                    {% endif %}
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
@@ -38,9 +54,21 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
+                        {% if data['contact-1-name'] %}
+                        1
+                        {% else %}
                         0
+                        {% endif %}
 
                         <span class="govuk-visually-hidden">contacts in the system</span>
+
+                        {% if data['contact-1-name'] %}
+                        <ul class="govuk-list">
+                            <li>
+                                <a href="#" class="govuk-link">Add a contact</a>
+                            </li>
+                        </ul>
+                        {% endif %}
                     </p>
                 </div>
             </div>
