--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -120,7 +120,9 @@
 
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            London Borough of Croydon Council
+                            <a href="org-view-croydon-new" class="govuk-link">
+                                London Borough of Croydon Council
+                            </a>
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
@@ -138,7 +140,9 @@
 
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            Remploy
+                            <a href="org-view-remploy" class="govuk-link">
+                                Remploy
+                            </a>
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
@@ -158,7 +162,9 @@
 
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
-                            Serco
+                            <a href="org-view-serco" class="govuk-link">
+                                Serco
+                            </a>
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
