User numbers consistent on org list and org views

--- a/app/views/mvp1/org-view-capita.html
+++ b/app/views/mvp1/org-view-capita.html
@@ -45,7 +45,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        7
+                        3
 
                         <span class="govuk-visually-hidden">contacts in the system</span>
                     </p>
@@ -70,9 +70,9 @@
                         <span class="govuk-visually-hidden">There are currently</span>
 
                         {% if data['user-full-name'] %}
-                            75
+                            14
                         {% else %}
-                            74
+                            13
                         {% endif %}
 
                         <span class="govuk-visually-hidden">users in the system</span>
@@ -113,7 +113,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        4
+                        2
 
                         <span class="govuk-visually-hidden">teams in the system</span>
                     </p>
@@ -141,7 +141,7 @@
                     items: [
                         {
                             value: "remove-by-contract",
-                            text: "Remove users by contract"
+                            text: "Remove users by team"
                         },
                         {
                             value: "remove-by-service",
