--- a/app/views/mvp1/org-view-custom.html
+++ b/app/views/mvp1/org-view-custom.html
@@ -151,8 +151,8 @@
                     },
                     items: [
                         {
-                            value: "remove-by-contract",
-                            text: "Remove users by contract"
+                            value: "remove-by-team",
+                            text: "Remove users by team"
                         },
                         {
                             value: "remove-by-service",
