--- a/app/views/mvp1/org-view-dwp.html
+++ b/app/views/mvp1/org-view-dwp.html
@@ -41,7 +41,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        8
+                        16
 
                         <span class="govuk-visually-hidden">contacts in the system</span>
                     </p>
@@ -66,9 +66,9 @@
                         <span class="govuk-visually-hidden">There are currently</span>
 
                         {% if data['user-full-name'] %}
-                            433
+                            133
                         {% else %}
-                            432
+                            132
                         {% endif %}
 
                         <span class="govuk-visually-hidden">users in the system</span>
@@ -136,8 +136,8 @@
                     },
                     items: [
                         {
-                            value: "remove-by-contract",
-                            text: "Remove users by contract"
+                            value: "remove-by-team",
+                            text: "Remove users by team"
                         },
                         {
                             value: "remove-by-service",
