--- a/app/views/mvp1/org-view-serco.html
+++ b/app/views/mvp1/org-view-serco.html
@@ -142,8 +142,8 @@
                     },
                     items: [
                         {
-                            value: "remove-by-contract",
-                            text: "Remove users by contract"
+                            value: "remove-by-team",
+                            text: "Remove users by team"
                         },
                         {
                             value: "remove-by-service",
