--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -37,18 +37,14 @@
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
                             {% if data['user-full-name'] and data['organisation-name'] == 'dwp' %}
-                                1
+                                133
                             {% else %}
-                                0
+                                132
                             {% endif %}
                         </td>
 
                         <td class="govuk-table__cell">
-                            {% if data['user-full-name'] and data['organisation-name'] == 'dwp' %}
-                                <a href="user-list-prap-new" class="govuk-link">View users</a>
-                            {% else %}
-                                <a href="user-add-user-prap-dwp" class="govuk-link">Add user</a>
-                            {% endif %}
+                                        <a href="user-list-prap-dwp" class="govuk-link">View users</a>
                         </td>
                     </tr>
 
