Fixed broken links for add user on org view

--- a/app/views/mvp1/org-view-remploy.html
+++ b/app/views/mvp1/org-view-remploy.html
@@ -80,11 +80,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-G4S" class="govuk-link">Add a user</a>
+                            <a href="user-add-user-prap-remploy" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-G4S" class="govuk-link">View all users</a>
+                            <a href="user-list-prap-remploy" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
