--- a/app/views/mvp1/org-view-serco.html
+++ b/app/views/mvp1/org-view-serco.html
@@ -82,11 +82,11 @@
 
                     <ul class="govuk-list">
                         <li>
-                            <a href="user-add-user-prap-G4S" class="govuk-link">Add a user</a>
+                            <a href="user-add-user-prap-serco" class="govuk-link">Add a user</a>
                         </li>
 
                         <li>
-                            <a href="user-list-prap-G4S" class="govuk-link">View all users</a>
+                            <a href="user-list-prap-serco" class="govuk-link">View all users</a>
                         </li>
                     </ul>
                 </div>
