--- a/app/views/dev1/user-add-user-prap-org.html
+++ b/app/views/dev1/user-add-user-prap-org.html
@@ -66,6 +66,16 @@
                     }) }}
                 </fieldset>
             </form>
+
+            <p class="govuk-!-margin-top-6">
+                <a href="/mvp1/organisation-add-prap" class="govuk-link">
+                    Add an organisation
+                </a><br>
+
+                <a href="/mvp1/organisation-list-prap" class="govuk-link">
+                    View all organisations
+                </a>
+            </p>
         </div>
     </div>
 {% endblock %}
@@ -76,7 +86,9 @@
 <script type="text/javascript">
     accessibleAutocomplete.enhanceSelectElement({
         defaultValue: '',
-        selectElement: document.getElementById('organisation-name')
+        selectElement: document.getElementById('organisation-name'),
+        minLength: 3,
+        tNoResults: () => 'No organisations found.'
     });
 </script>
 {% endblock %}
