Hide company numbers until UR reveals a need

--- a/app/views/mvp1/org-view-capita.html
+++ b/app/views/mvp1/org-view-capita.html
@@ -30,9 +30,7 @@
                         S4 7TL
                     </p>
 
-                    <p>
-                        Company number: 2081330
-                    </p>
+                    <!--<p>Company number: 2081330</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
