--- a/app/views/mvp1/org-view-croydon-new.html
+++ b/app/views/mvp1/org-view-croydon-new.html
@@ -32,9 +32,7 @@
 
                     </p>
 
-                    <p>
-                        Company number: 04992204
-                    </p>
+                    <!--<p>Company number: 04992204</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
