--- a/app/views/mvp1/org-view-g4s.html
+++ b/app/views/mvp1/org-view-g4s.html
@@ -31,9 +31,7 @@
                         SW1E 6QT
                     </p>
 
-                    <p>
-                        Company number: 04992207
-                    </p>
+                    <!--<p>Company number: 04992207</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
