--- a/app/views/mvp1/org-view-remploy.html
+++ b/app/views/mvp1/org-view-remploy.html
@@ -30,9 +30,7 @@
                         LE19 1WZ
                     </p>
 
-                    <p>
-                        Company number: 04992207
-                    </p>
+                    <!--<p>Company number: 04992207</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
