--- a/app/views/mvp1/org-view-serco.html
+++ b/app/views/mvp1/org-view-serco.html
@@ -32,9 +32,7 @@
 
                     </p>
 
-                    <p>
-                        Company number: 04992202
-                    </p>
+                    <!--<p>Company number: 04992202</p>-->
 
                     <p>
                         <a href="#" class="govuk-link">Edit organisation details</a>
