--- a/app/views/mvp1/org-view-capita.html
+++ b/app/views/mvp1/org-view-capita.html
@@ -54,7 +54,7 @@
                         </li>
 
                         <li>
-                            <a href="#" class="govuk-link">View all contacts</a>
+                            <a href="contacts-list-capita" class="govuk-link">View all contacts</a>
                         </li>
                     </ul>
                 </div>
