--- a/app/views/mvp1/org-view-custom.html
+++ b/app/views/mvp1/org-view-custom.html
@@ -44,7 +44,7 @@
                     {% endif %}
 
                     <p>
-                        <a href="#" class="govuk-link">Edit organisation details</a>
+                        <a href="organisation-edit-details" class="govuk-link">Edit organisation details</a>
                     </p>
                 </div>
 
