--- a/app/views/dev1/user-view.html
+++ b/app/views/dev1/user-view.html
@@ -26,7 +26,7 @@
                             text: "Name"
                         },
                         value: {
-                            text: data['user-full-name']
+                            text: data["user-first-name"] + ' ' + data["user-last-name"] 
                         }
                     },
                     {
