--- a/app/views/dev1/user-add-user-prap-org.html
+++ b/app/views/dev1/user-add-user-prap-org.html
@@ -88,7 +88,7 @@
         defaultValue: '',
         selectElement: document.getElementById('organisation-name'),
         minLength: 3,
-        tNoResults: () => 'No organisations found.'
+        tNoResults: function() { return 'No organisations found.'; }
     });
 </script>
 {% endblock %}
