Update changes on dev read idex tab

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -408,6 +408,10 @@
                 <li>
                     Added in research prototype version of 'choose user organisation' - accepted on the basis it may change after future user research
                 </li>
+
+                <li>
+                        Changed 'Full name' input to 'First name, Last name' due to concerns around data storage
+                    </li>
             </ul>
         {% endset %}
 
