--- a/app/views/mvp1/org-view-dwp.html
+++ b/app/views/mvp1/org-view-dwp.html
@@ -65,7 +65,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        {% if data['user-full-name'] %}
+                        {% if data['user-first-name'] and data['user-last-name'] %}
                             133
                         {% else %}
                             132
