--- a/app/views/mvp1/user-list-prap-g3s.html
+++ b/app/views/mvp1/user-list-prap-g3s.html
@@ -33,7 +33,11 @@
     <tbody class="govuk-table__body">
       {% if data['organisation-name'] == 'G4S' %}
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
+        <th scope="row" class="govuk-table__header">
+            <a href="user-view" class="govuk-link">
+                {{ data['user-first-name'] }} {{ data['user-last-name'] }}
+            </a>
+        </th>
         <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
         <td class="govuk-table__cell">Pending activation</td>
       </tr>
