--- a/app/views/mvp1/user-summary-health-assessment.html
+++ b/app/views/mvp1/user-summary-health-assessment.html
@@ -23,7 +23,7 @@
                     text: "User details"
                 },
                 value: {
-                    html: data["user-full-name"] + "<br>" + data["user-email-address"] + "<br>" + data["user-phone-number"]
+                    html: data["user-first-name"] + data['user-last-name'] + "<br>" + data["user-email-address"] + "<br>" + data["user-phone-number"]
                 },
                 actions: {
                     items: [
