--- a/app/views/mvp1/user-view-old.html
+++ b/app/views/mvp1/user-view-old.html
@@ -22,7 +22,7 @@
                             text: "Name"
                         },
                         value: {
-                            text: data['user-full-name']
+                            text: data['user-first-name'] + data['user-last-name']
                         }
                     },
                     {
