--- a/app/views/dev1/user-list-prap.html
+++ b/app/views/dev1/user-list-prap.html
@@ -28,9 +28,13 @@
     </thead>
 
     <tbody class="govuk-table__body">
-      {% if data["user-first-name"] +  data["user-last-name"]  %}
+      {% if data["user-first-name"] and data["user-last-name"] %}
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data["user-first-name"] + ' ' + data["user-last-name"] }}</a></th>
+        <th scope="row" class="govuk-table__header">
+            <a href="user-view" class="govuk-link">
+                {{ data["user-first-na§§e"] + ' ' + data["user-last-name"] }}
+            </a>
+        </th>
         <td class="govuk-table__cell">{{ data['organisation-name'] }}</td>
         <td class="govuk-table__cell">Pending activation</td>
       </tr>
