--- a/app/views/mvp1/dashboard-service-prap-no-orgs.html
+++ b/app/views/mvp1/dashboard-service-prap-no-orgs.html
@@ -44,7 +44,7 @@
         <p class="govuk-heading-xl govuk-!-margin-bottom-5">
             <span class="govuk-visually-hidden">There are currently</span>
 
-            {% if data['user-full-name'] %}
+            {% if data['user-first-name'] and data['user-last-name'] %}
                 1
             {% else %}
                 0
