--- a/app/views/mvp1/org-view-remploy.html
+++ b/app/views/mvp1/org-view-remploy.html
@@ -67,7 +67,7 @@
                     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
                         <span class="govuk-visually-hidden">There are currently</span>
 
-                        {% if data['user-full-name'] %}
+                        {% if data['user-first-name'] and data['user-last-name'] %}
                             24
                         {% else %}
                             23
