--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -37,7 +37,7 @@
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
-                            {% if data['user-full-name'] %}
+                            {% if data['user-first-name'] and data['user-last-name'] %}
                                 1
                             {% else %}
                                 0
@@ -45,7 +45,7 @@
                         </td>
 
                         <td class="govuk-table__cell">
-                            {% if data['user-full-name'] %}
+                            {% if data['user-first-name'] and data['user-last-name'] %}
                                     <a href="user-list-prap-new" class="govuk-link">View user</a>
                                 {% else %}
                                     <a href="user-add-user-prap-new" class="govuk-link">Add user</a>
@@ -82,7 +82,7 @@
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
-                            {% if data['user-full-name'] and data['organisation-name'] == 'dwp' %}
+                            {% if data['user-first-name'] and data['user-last-name'] and data['organisation-name'] == 'dwp' %}
                                 133
                             {% else %}
                                 132
