--- a/app/views/mvp1/suspend-check.html
+++ b/app/views/mvp1/suspend-check.html
@@ -14,7 +14,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      
+
 
       <form id="form" method="post" action="suspend-confirm">
 
@@ -25,7 +25,7 @@
           name: "suspend-check",
           fieldset: {
             legend: {
-              text: "Are you sure you want to suspend " + data["user-full-name"] + "?",
+              text: "Are you sure you want to suspend " + data["user-first-name"] + data['user-last-name'] "?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l"
             }
@@ -49,7 +49,7 @@
 
 
       </form>
-     
+
 
     </div>
   </div>
