--- a/app/views/mvp1/user-add-user-prap.html
+++ b/app/views/mvp1/user-add-user-prap.html
@@ -26,10 +26,19 @@
 
                 {{ govukInput({
                     label: {
-                        text: "Full name"
+                        text: "First name"
                     },
-                    id: "user-full-name",
-                    name: "user-full-name",
+                    id: "user-first-name",
+                    name: "user-first-name",
+                    classes: "govuk-!-width-three-quarters"
+                }) }}
+
+                {{ govukInput({
+                    label: {
+                        text: "Last name"
+                    },
+                    id: "user-last-name",
+                    name: "user-last-name",
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
