--- a/app/views/mvp1/user-admin-confirmation-prap.html
+++ b/app/views/mvp1/user-admin-confirmation-prap.html
@@ -11,22 +11,16 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      
-
         {{ govukPanel({
-
-      
           titleText: "Admin added",
-    
-          html: data["user-full-name"] 
+          html: data["user-first-name"] + data['user-last-name']
         }) }}
-
-
 
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
       <p>
-        <a href="user-add-user-prap-dwp" class="govuk-link">Add another service admin</a></p>
+        <a href="user-add-user-prap-dwp" class="govuk-link">Add another service admin</a>
+      </p>
 
       <p>
       <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
