--- a/app/views/mvp1/user-confirmation-prap-new.html
+++ b/app/views/mvp1/user-confirmation-prap-new.html
@@ -11,14 +11,9 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-    
-
       {{ govukPanel({
-
-      
         titleText: "User added",
-  
-        html: data["user-full-name"] + " added to " + data["organisation-name"]
+        html: data["user-first-name"] + data['user-last-name'] + " added to " + data["organisation-name"]
       }) }}
 
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
